# haskell-language-server

./: haskell-language-server.cabal
exe/: Plugins.hs
ghcide/src/Generics/SYB/: GHC.hs
plugins/hls-tactics-plugin/: hls-tactics-plugin.cabal
plugins/hls-tactics-plugin/src/: Rewrite.hs
plugins/hls-tactics-plugin/src/Copilot/: Auto.hs  CaseSplit.hs  CodeGen.hs  Context.hs  Debug.hs  FeatureSet.hs  GHC.hs  Judgements.hs  KnownStrategies.hs  LanguageServer.hs  Machinery.hs  Naming.hs  Plugin.hs  Range.hs  Simplify.hs  Tactics.hs  TestTypes.hs  Types.hs
plugins/hls-tactics-plugin/src/Copilot/CodeGen/: Utils.hs
plugins/hls-tactics-plugin/src/Copilot/KnownStrategies/: QuickCheck.hs
plugins/hls-tactics-plugin/src/Copilot/LanguageServer/: CommandProviders.hs  TacticProviders.hs
plugins/hls-tactics-plugin/src/Ide/Plugin/Tactic/: Judgements.hs  LanguageServer.hs  Types.hs
plugins/hls-tactics-plugin/src/Rewrite/Test/: Instances.hs  QuickSpec.hs  STLC.hs  SanityCheck.hs  Spec.hs
plugins/hls-tactics-plugin/src/Wingman/: Auto.hs  CaseSplit.hs  CodeGen.hs  Context.hs  EmptyCase.hs  GHC.hs  Judgements.hs  KnownStrategies.hs  LanguageServer.hs  Machinery.hs  Naming.hs  Plugin.hs  Tactics.hs  Types.hs
plugins/hls-tactics-plugin/src/Wingman/KnownStrategies/: QuickCheck.hs
plugins/hls-tactics-plugin/src/Wingman/LanguageServer/: TacticProviders.hs
plugins/hls-tactics-plugin/src/Wingman/Metaprogramming/: Lexer.hs  Parser.hs
plugins/hls-tactics-plugin/test/: AutoTupleSpec.hs  UnificationSpec.hs
plugins/hls-tactics-plugin/test/CodeAction/: DestructAllSpec.hs
plugins/hls-tactics-plugin/test/golden/: DestructGroupPairCase.expected.hs  DestructGroupPairCase.hs
plugins/tactics/: hls-tactics-plugin.cabal
plugins/tactics/src/Ide/Plugin/: Tactic.hs
plugins/tactics/src/Ide/Plugin/Tactic/: Auto.hs  CodeGen.hs  GHC.hs  Judgements.hs  Machinery.hs  Tactics.hs  Types.hs
plugins/tactics/test/: GoldenSpec.hs  Machinery.hs
plugins/tactics/test/testdata/: Placeholder.hs  fmap_list.hs  test.cabal
test/functional/: Copilot.hs  Tactic.hs
test/testdata/tactic/: GoldenSplitPair.hs.expected  T2.hs
