cabal-version:      2.2
category:           Development
name:               hls-tactics-plugin
version:            0.5.1.0
synopsis:           Tactics plugin for Haskell Language Server
description:        Please see README.md
author:             Sandy Maguire, Reed Mullanix
maintainer:         sandy@sandymaguire.me
copyright:          Sandy Maguire, Reed Mullanix
license:            Apache-2.0
license-file:       LICENSE
build-type:         Simple
-- extra-source-files:
--   README.md
--   ChangeLog.md

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

library
  hs-source-dirs:   src
  exposed-modules:
    Copilot.Auto
    Copilot.CaseSplit
    Copilot.CodeGen
    Copilot.CodeGen.Utils
    Copilot.Context
    Copilot.Debug
    Copilot.FeatureSet
    Copilot.GHC
    Copilot.Judgements
    Copilot.KnownStrategies
    Copilot.KnownStrategies.QuickCheck
    Copilot.LanguageServer
    Copilot.LanguageServer.CommandProviders
    Copilot.Machinery
    Copilot.Naming
    Copilot.Plugin
    Copilot.Range
    Copilot.Simplify
    Copilot.Tactics
    Copilot.Types
    Copilot.TestTypes

  ghc-options:
    -Wno-name-shadowing -Wredundant-constraints -Wno-unticked-promoted-constructors
  if flag(pedantic)
    ghc-options: -Werror

  build-depends:
    , aeson
    , base           >=4.12 && <5
    , containers
    , directory
    , extra
    , filepath
    , fingertree
    , generic-lens
    , ghc
    , ghc-boot-th
    , ghc-exactprint
    , ghc-source-gen
    , ghcide         >=0.1
    , lsp
    , hls-plugin-api
    , lens
    , mtl
    , refinery       ^>=0.3
    , retrie         >=0.1.1.0
    , shake          >=0.17.5
    , syb
    , text
    , transformers
    , deepseq

  default-language: Haskell2010
  default-extensions: DataKinds, TypeOperators

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    AutoTupleSpec
    UnificationSpec
  hs-source-dirs:
      test
  ghc-options: -Wall -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , base
    , checkers
    , hspec
    , mtl
    , hls-tactics-plugin
    , hls-plugin-api
    , hie-bios
    , ghc
    , containers
  build-tool-depends: hspec-discover:hspec-discover
  default-language: Haskell2010

